# -* Makefile *- 
#
# Author : Guillaume Boulant (CSSI)
# Module : KERNEL 
# $Header$
#

include $(top_srcdir)/salome_adm/unix/make_common_starter.am

#
# ===============================================================
# Files to be installed
# ===============================================================
#


salomeres_DATA=\
	CatalogDataType.xml \
	KERNELCatalog.xml \
	CatalogResources.xml \
	close.png \
	config \
	channel.cfg \
	SALOMEDS_Resources
