
include $(top_srcdir)/salome_adm/unix/make_common_starter.am

SUBDIRS = config_files

DEPRECATED_FILES=\
	DEPRECATED/F77config.h.in \
	DEPRECATED/sstream.in \
	DEPRECATED/envScript.in

salomeadmux_DATA=\
	SALOMEconfig.h.in \
	depend.in \
	make_commence.in \
	make_conclude.in \
	make_module.in \
	make_omniorb.in \
	$(DEPRECATED_FILES)
